Build and Test の途中の記録（E2E の名前を番号順に見直し DSL の管理画面の流れを追加、DSL の時間を測る仕組みを perf に追加、実測と成果物。NFR12.3 と U4-STORAGE が未達のため Code Generation へ戻す）
Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>